@@ -1,15 +1,16 @@
 Package: NNbenchmark
 Title: A Package to Benchmark Neural Network Packages
-Description: Datasets and functions to benchmark neural network functions and training algorithms (convergence, speed, ease of use) in 69 R packages.
+Description: Datasets and functions to benchmark neural network functions and training algorithms (convergence, speed, ease of use) of R packages.
 Imports: R6, pkgload
 Suggests: brnn, validann
-Version: 2.2
-Date: 2019-08-13
+Version: 2.3
+Date: 2019-08-19
 License: GPL-2
 Maintainer: Patrice Kiener <fattailsr@inmodelia.com>
 Author: Patrice Kiener [aut, cre],
   Salsabila Mahdi [aut, ctb],
-  Akshaj Verma [aut, ctb]  
+  Akshaj Verma [aut, ctb],
+  Yifu Yan [aut]
 Encoding: UTF-8
 NeedsCompilation: no
 LazyData: true
