@@ -4,6 +4,9 @@
 
 #' @title Create a timer object. Get the data frame of a timer object
 #' @description
+#' This is a modified version of the \code{timeR} package for an internal use. 
+#' Full credit is to Yifu Yan, the author of the \code{timeR} package.
+#' 
 #' \code{createTimer} creates a timer object.
 #' 
 #' \code{getTimer} returns a data frame with all records saved by the timer 
