@@ -6,7 +6,7 @@
 \title{Dataset mIshigami}
 \description{
 A multivariate dataset (x1, x2, x3, y) of class matrix and dim 500 x 4 to be fitted 
-by a neural network with 10 hidden neurons.
+by a neural network with 10 hidden neurons (51 parameters).
 }
 \examples{
 ht(mIshigami)
