@@ -9,7 +9,9 @@
 timeR
 }
 \description{
-timer is a R6 Class that represent a timer.
+timer is a R6 Class that represent a timer. This is a modified version of the 
+\code{timeR} package for an internal use. Full credit is to Yifu Yan, the author 
+of the \code{timeR} package.
 }
 \details{
 \code{getTimer} returns a data frame with all records saved by the timer 
